--- a/MyDoctorGAE/.classpath
+++ b/MyDoctorGAE/.classpath
@@ -7,6 +7,8 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-5.1.6-sources.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-5.1.6.jar" sourcepath="war/WEB-INF/lib/objectify-5.1.6-sources.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.3.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-2.4.jar"/>
 	<classpathentry kind="con" path="com.google.gdt.eclipse.managedapis.MANAGED_API_CONTAINER/drive-v2r183lv1.18.0-rc"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
